# sentavos

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: database.py  main.py  models.py
app/tests/: conftest.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Modal.tsx
frontend/src/lib/: api.ts  format.ts  queries.ts  types.ts
frontend/src/pages/: Categories.tsx  Dashboard.tsx  Transactions.tsx
